@@ -4,6 +4,10 @@ plugin.tx_nkwgok_pi1{
 		# link1 = http://www.sub.uni-goettingen.de/download/library.csv
 		# link2 = http://www.sub.uni-goettingen.de/download/geography.csv
 	}
+
 	# Do Opac links in the tree perform a deep or shallow search?
 	shallowSearch = 0
+
+	# When using menus expand the hierarchy in-place when there are <= child elements
+	menuInlineThreshold = 2
 }
