@@ -1,3 +1,6 @@
+2012-01-22 1.6.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* Make number of inline menu child elements configurable through the `menuInlineThreshold` TypoScript setting.
+
 2012-01-27 1.5.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Ignore hierarchy level in Pica field 009B $a and compute the value ourselves.
 		We depend on this data being correct and it may be incorrect, causing an
